Modify index.html To Include Recipe Links
added an unordered list to index.html that contains the recipe links

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/fried-chicken.html">Fried Chicken</a></li>
+        <li><a href="recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a></li>
+    </ul>
+
 </body>
 
 </html>
