Add CSS Styling
modified website to utilise css Styling

--- a/recipes/fried-chicken.html
+++ b/recipes/fried-chicken.html
@@ -4,44 +4,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/recipes.css">
     <title>Fried Chicken</title>
 </head>
 
 <body>
-    <h1>Fried Chicken</h1>
-    <img src="../img/fried_chicken.jpeg" alt="a picture of a fried chicken leg" height="150" width="200">
-    <h4>Description</h4>
-    <p>
-        For the perfect spicy and crispy fried chicken, this simple recipe ensures your chicken is packed full of
-        flavour and has a great crunch
-        <a href="https://www.taste.com.au/recipes/southern-fried-chicken-recipe/eb1h8mku" target="_blank"
-            rel="noreferrer">Taste.com.au</a>
-    </p>
-
-    <h4>Ingredients</h4>
-    <ul>
-        <li>2 x 1kg Whole Chickens</li>
-        <li>375ml buttermilk</li>
-        <li>180g dried breadcrumbs</li>
-        <li>115g plain flour</li>
-        <li>2 1/2 tbsp cajun seasoning</li>
-        <li>2 tsp paprika</li>
-        <li>Canola oil, to deep-fry</li>
-    </ul>
-    <h4>Method</h4>
-    <ol>
-        <li>Cut each chicken into 8 pieces</li>
-        <li>Combine the chicken and buttermilk in a large bowl. Place in the fridge for 6 hours or overnight to
-            marinate.</li>
-        <li>Combine the breadcrumbs, flour, seasoning and paprika in a large shallow dish or large sealable plastic bag.
-        </li>
-        <li>Drain chicken, and discard buttermilk. Add a piece of chicken to breadcrumb mixture. Turn to coat. Transfer
-            to a large plate. Repeat with remaining chicken. Place chicken in the fridge for 30 minutes to chill.</li>
-        <li>Heat oil in an electric deep-fryer to 180C. If using a large saucepan, heat oil on high heat to 180C.
-            Deep-fry chicken, in 4 batches, for 2-3 minutes or until crisp and light golden. Drain on paper towel.</li>
-        <li>Preheat the oven to 160C/140C fan forced. Transfer the fried chicken to 2 wire racks, each set over a
-            roasting pan or baking tray. Bake for 25 minutes or until the chicken is cooked through.</li>
-    </ol>
+    <div id="heading-container">
+        <h1>Fried Chicken</h1>
+    </div>
+    <div id="body-container">
+        <img id="recipe-image" src="../img/fried_chicken.jpeg" alt="a picture of a fried chicken leg" height="150"
+            width="200">
+        <div id="description">
+            <h4>Description</h4>
+            <p>
+                For the perfect spicy and crispy fried chicken, this simple recipe ensures your chicken is packed full
+                of
+                flavour and has a great crunch
+                <a href="https://www.taste.com.au/recipes/southern-fried-chicken-recipe/eb1h8mku" target="_blank"
+                    rel="noreferrer">Taste.com.au</a>
+            </p>
+        </div>
+        <div id="ingredients">
+            <h4>Ingredients</h4>
+            <ul>
+                <li>2 x 1kg Whole Chickens</li>
+                <li>375ml buttermilk</li>
+                <li>180g dried breadcrumbs</li>
+                <li>115g plain flour</li>
+                <li>2 1/2 tbsp cajun seasoning</li>
+                <li>2 tsp paprika</li>
+                <li>Canola oil, to deep-fry</li>
+            </ul>
+        </div>
+        <div id="method">
+            <h4>Method</h4>
+            <ol>
+                <li>Cut each chicken into 8 pieces</li>
+                <li>Combine the chicken and buttermilk in a large bowl. Place in the fridge for 6 hours or overnight to
+                    marinate.</li>
+                <li>Combine the breadcrumbs, flour, seasoning and paprika in a large shallow dish or large sealable
+                    plastic bag.
+                </li>
+                <li>Drain chicken, and discard buttermilk. Add a piece of chicken to breadcrumb mixture. Turn to coat.
+                    Transfer
+                    to a large plate. Repeat with remaining chicken. Place chicken in the fridge for 30 minutes to
+                    chill.</li>
+                <li>Heat oil in an electric deep-fryer to 180C. If using a large saucepan, heat oil on high heat to
+                    180C.
+                    Deep-fry chicken, in 4 batches, for 2-3 minutes or until crisp and light golden. Drain on paper
+                    towel.</li>
+                <li>Preheat the oven to 160C/140C fan forced. Transfer the fried chicken to 2 wire racks, each set over
+                    a
+                    roasting pan or baking tray. Bake for 25 minutes or until the chicken is cooked through.</li>
+            </ol>
+        </div>
+    </div>
 </body>
 
 </html>
