--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/index-styles.css">
     <title>Odin Recipes</title>
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/fried-chicken.html">Fried Chicken</a></li>
-        <li><a href="recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a></li>
-    </ul>
-
+    <div id="heading-container">
+        <h1>Odin Recipes</h1>
+    </div>
+    <div id="body-container">
+        <ul>
+            <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/fried-chicken.html">Fried Chicken</a></li>
+            <li><a href="recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a></li>
+        </ul>
+    </div>
 </body>
 
 </html>
