--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,107 +4,130 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/recipes.css">
     <title>Lasagna</title>
 </head>
 
 <body>
+    <div id="heading-container">
     <h1>Lasagna</h1>
-    <img src="../img/lasagna.jpg" alt="a picture of lasagna" height="200" width="250">
-    <h4>Description</h4>
-    <p>
-        Fall in love at first bite with our favourite lasagne recipe. With layer upon layer of ground beef mince meat
-        sauce, pasta, and creamy cheesy sauce, this comforting lasagne (or lasagna, for those in the US) is a warm hug
-        on a plate.
-    </p>
-    <p>
-        Originally developed by Sarah Hobbs and re-tested by Alison Adams, this delicious recipe has been absolutely
-        perfected.
-    </p>
-    <p>
-        <a href="https://www.taste.com.au/recipes/our-favourite-lasagne/2ac35c7f-3320-48ef-b2cb-ecef75883241"
-            target="_blank" rel="noreferrer">Taste.com.au</a>
-    </p>
-    <h4>Ingredients</h4>
-    <ul>
-        <li>2 tsp olive oil</li>
-        <li>1 brown onion, halved, finely chopped</li>
-        <li>2 garlic cloves, crushed</li>
-        <li>750g Beef Mince</li>
-        <li>2x 400g cans italian dived tomatoes</li>
-        <li>125ml dry red wine</li>
-        <li>55g tomato paste</li>
-        <li>salt and ground black pepper</li>
-        <li>Olive oil, extra, to grease</li>
-        <li>4 fresh lasagna sheets</li>
-        <li>55g coarsely grated Mozzarella Cheese</li>
-        <li>Mixed salad leaves, to serve</li>
-        <li>4 cups Milk</li>
-        <li>1 brown onion, halved, coarsely chopped</li>
-        <li>8 fresh parsely stalks</li>
-        <li>8 whole black peppercorns</li>
-        <li>4 whole cloves</li>
-        <li>2 bay leaves</li>
-        <li>60g butter</li>
-        <li>50g plain flour</li>
-        <li>70g finely grated parmesan</li>
-        <li>pinch ground nutmeg</li>
-    </ul>
-    <h4>Method</h4>
-    <ol>
-        <li>
-            Heat the oil in a large frying pan over medium heat. Add the onion and garlic and cook, stirring, for 5
-            minutes or until
-            onion softens. Add the mince and cook, stirring with a wooden spoon to break up any lumps, for 5 minutes or
-            until mince
-            changes colour. Add the tomato, wine and tomato paste, and bring to the boil. Reduce heat to low. Simmer,
-            uncovered,
-            stirring occasionally, for 30 minutes or until sauce thickens slightly. Remove from heat. Taste and season
-            with salt and
-            pepper.
-        </li>
-        <li>
-            Meanwhile, to make the cheese sauce, combine the milk, onion, parsley stalks, peppercorns, cloves and bay
-            leaves in a
-            medium saucepan and bring to a simmer over medium heat. Remove from heat and set aside for 15 minutes to
-            infuse.
-        </li>
-        <li>
-            Strain the milk mixture through a fine sieve into a large jug. Discard solids.
-        </li>
-        <li>
-            Melt the butter in a large saucepan over medium-high heat until foaming. Add the flour and cook, stirring,
-            for 1-2
-            minutes or until mixture bubbles and begins to come away from the side of the pan. Remove from heat.
-        </li>
-        <li>
-            Gradually pour in half the milk, whisking constantly with a balloon whisk, until mixture is smooth.
-            Gradually add the
-            remaining milk, whisking until smooth and combined.
-        </li>
-        <li>
-            Place saucepan over medium-high heat and bring to the boil, stirring constantly with a wooden spoon, for 5
-            minutes or
-            until sauce thickens and coats the back of the spoon. Remove from heat. Add the parmesan and stir until
-            cheese melts.
-            Taste and season with nutmeg, salt and white pepper.
-        </li>
-        <li>
-            Preheat oven to 180°C. Brush a rectangular 3L (12 cup) capacity ovenproof dish with oil to lightly grease.
-            Spread
-            one-quarter of the bechamel sauce over the base of the prepared dish. Arrange 1 lasagne sheet over the
-            sauce. Top with
-            one-third of the mince mixture and one-third of the remaining bechamel sauce. Continue layering with the
-            remaining
-            lasagne sheets, mince mixture and bechamel, finishing with a layer of bechamel. Sprinkle with mozzarella.
-            Place on a
-            baking tray. Bake in preheated oven for 40 minutes or until cheese melts, is golden brown, and the edges are
-            bubbling.
-            Remove from oven and set aside for 10 minutes to set.
-        </li>
-        <li>
-            Cut the lasagne into 8 portions and serve with mixed salad leaves.
-        </li>
-    </ol>
+    </div>
+    <div id="body-container">
+    <img id="recipe-image" src="../img/lasagna.jpg" alt="a picture of lasagna" height="200" width="250">
+    <div id="description">
+        <h4>Description</h4>
+        <p>
+            Fall in love at first bite with our favourite lasagne recipe. With layer upon layer of ground beef mince
+            meat
+            sauce, pasta, and creamy cheesy sauce, this comforting lasagne (or lasagna, for those in the US) is a warm
+            hug
+            on a plate.
+        </p>
+        <p>
+            Originally developed by Sarah Hobbs and re-tested by Alison Adams, this delicious recipe has been absolutely
+            perfected.
+        </p>
+        <p>
+            <a href="https://www.taste.com.au/recipes/our-favourite-lasagne/2ac35c7f-3320-48ef-b2cb-ecef75883241"
+                target="_blank" rel="noreferrer">Taste.com.au</a>
+        </p>
+    </div>
+    <br>
+    <div id="ingredients">
+        <h4>Ingredients</h4>
+        <ul>
+            <li>2 tsp olive oil</li>
+            <li>1 brown onion, halved, finely chopped</li>
+            <li>2 garlic cloves, crushed</li>
+            <li>750g Beef Mince</li>
+            <li>2x 400g cans italian dived tomatoes</li>
+            <li>125ml dry red wine</li>
+            <li>55g tomato paste</li>
+            <li>salt and ground black pepper</li>
+            <li>Olive oil, extra, to grease</li>
+            <li>4 fresh lasagna sheets</li>
+            <li>55g coarsely grated Mozzarella Cheese</li>
+            <li>Mixed salad leaves, to serve</li>
+            <li>4 cups Milk</li>
+            <li>1 brown onion, halved, coarsely chopped</li>
+            <li>8 fresh parsely stalks</li>
+            <li>8 whole black peppercorns</li>
+            <li>4 whole cloves</li>
+            <li>2 bay leaves</li>
+            <li>60g butter</li>
+            <li>50g plain flour</li>
+            <li>70g finely grated parmesan</li>
+            <li>pinch ground nutmeg</li>
+        </ul>
+    </div>
+    <div id="method">
+        <h4>Method</h4>
+        <ol>
+            <li>
+                Heat the oil in a large frying pan over medium heat. Add the onion and garlic and cook, stirring, for 5
+                minutes or until
+                onion softens. Add the mince and cook, stirring with a wooden spoon to break up any lumps, for 5 minutes
+                or
+                until mince
+                changes colour. Add the tomato, wine and tomato paste, and bring to the boil. Reduce heat to low.
+                Simmer,
+                uncovered,
+                stirring occasionally, for 30 minutes or until sauce thickens slightly. Remove from heat. Taste and
+                season
+                with salt and
+                pepper.
+            </li>
+            <li>
+                Meanwhile, to make the cheese sauce, combine the milk, onion, parsley stalks, peppercorns, cloves and
+                bay
+                leaves in a
+                medium saucepan and bring to a simmer over medium heat. Remove from heat and set aside for 15 minutes to
+                infuse.
+            </li>
+            <li>
+                Strain the milk mixture through a fine sieve into a large jug. Discard solids.
+            </li>
+            <li>
+                Melt the butter in a large saucepan over medium-high heat until foaming. Add the flour and cook,
+                stirring,
+                for 1-2
+                minutes or until mixture bubbles and begins to come away from the side of the pan. Remove from heat.
+            </li>
+            <li>
+                Gradually pour in half the milk, whisking constantly with a balloon whisk, until mixture is smooth.
+                Gradually add the
+                remaining milk, whisking until smooth and combined.
+            </li>
+            <li>
+                Place saucepan over medium-high heat and bring to the boil, stirring constantly with a wooden spoon, for
+                5
+                minutes or
+                until sauce thickens and coats the back of the spoon. Remove from heat. Add the parmesan and stir until
+                cheese melts.
+                Taste and season with nutmeg, salt and white pepper.
+            </li>
+            <li>
+                Preheat oven to 180°C. Brush a rectangular 3L (12 cup) capacity ovenproof dish with oil to lightly
+                grease.
+                Spread
+                one-quarter of the bechamel sauce over the base of the prepared dish. Arrange 1 lasagne sheet over the
+                sauce. Top with
+                one-third of the mince mixture and one-third of the remaining bechamel sauce. Continue layering with the
+                remaining
+                lasagne sheets, mince mixture and bechamel, finishing with a layer of bechamel. Sprinkle with
+                mozzarella.
+                Place on a
+                baking tray. Bake in preheated oven for 40 minutes or until cheese melts, is golden brown, and the edges
+                are
+                bubbling.
+                Remove from oven and set aside for 10 minutes to set.
+            </li>
+            <li>
+                Cut the lasagne into 8 portions and serve with mixed salad leaves.
+            </li>
+        </ol>
+    </div>
+    </div>
 </body>
 
 </html>
